   diag.panel functions.

 o Default prepanel functions are now user-settable through
   lattice.options()

 o par.[main|sub|xlab|ylab].text parameter settings are more powerful.

 o Added support for 'just' component in draw.key() to allow
   justification of legend placement.

bug fixes
---------

 o More realistic check for equispaced grid in
   panel.levelplot.raster().



Changes in lattice 0.18
=======================

 o Hosting of the upstream sources has moved to R-forge.  This allows,
   among other things, the use of the R-forge issue tracker.

 o New xyplot.ts method, merging versions previously available
   in latticeExtra and zoo (thanks to the efforts of Felix Andrews)

 o An argument 'group.value', containing the level of the group, is now
   passed by panel.superpose to the 'panel.groups' function

 o Specifying 'auto.key' as a list now produces a legend even in the
   absence of 'groups', provided a 'text' component has been included

 o The 'layout' argument now accepts NA for number of columns or rows.

 o Scale limits 'xlim' & 'ylim' can have one NA to fix only one side.

 o Date and POSIXt scales now use new methods to calculate axis ticks,
   and now respond to the 'tick.number' component of 'scales'.

 o 'panel.qqmath' gains an argument 'tails.n' for exact data on tails.


Changes in lattice 0.17
=======================

new features
------------

 o New function simpleTheme() for creating nested lists without
   specifying the nesting structure (which is guessed)

 o Support for lattice.option(print.function) which is the function
   actually used when print.trellis() is called

 o New argument 'box.width' wherever 'box.ratio' is available (e.g.,
   panel.bwplot, panel.barchart, etc.), to specify absolute thickness
   (of boxes, bars, etc.)

 o New panel.refline() function, same as panel.abline(), but with
   default parameters from the "reference.line" settings.

 o parallel() has a new 'horizontal.axis' argument; when FALSE, the